src/test/deca/context/valid/testVisibility.deca
class A {
    protected int x;
    protected float y;
    boolean b = true;
}
