src/test/deca/context/invalid/testModuloWrongtypes.deca
// Description : opérateur modulo avec mauvais types
{
    int x;
    boolean y;
    int z = x % y;
}
